--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -26,6 +26,11 @@ server {
         alias /opt/liBlog/staticfiles; # your Django project's static files - amend as required
     }
 
+    location /python-start {
+        alias /opt/liBlog/docs/python_start;
+        index index.html;
+    }
+
     # Finally, send all non-media requests to the Django server.
     location / {
         proxy_pass  http://blog;
