--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -11,7 +11,7 @@ server {
     listen      8000;
     listen      80;
     # the domain name it will serve for
-    server_name www.iwebtools.cn; # substitute your machine's IP address or FQDN
+    server_name www.pylixm.top; # substitute your machine's IP address or FQDN
     charset     utf-8;
 
     # max upload size
@@ -42,6 +42,6 @@ server {
 
 server {
     listen       80;
-    server_name  iwebtools.cn;
-    return       301 http://www.iwebtools.cn$request_uri;
+    server_name  pylixm.top;
+    return       301 http://www.pylixm.top$request_uri;
 }
