--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -30,6 +30,10 @@ server {
         alias /opt/liBlog/docs/python_start;
         index index.html;
     }
+    location /saltstack {
+        alias /opt/liBlog/docs/saltstack-get-started-zh;
+        index index.html;
+    }
 
     # Finally, send all non-media requests to the Django server.
     location / {
