--- a/compose/nginx/nginx.conf
+++ b/compose/nginx/nginx.conf
@@ -8,10 +8,9 @@ upstream blog {
 # configuration of the server
 server {
     # the port your site will be served on
-    listen      8000;
     listen      80;
     # the domain name it will serve for
-    server_name www.iwebtools.cn; # substitute your machine's IP address or FQDN
+    server_name www.pylixm.top; # substitute your machine's IP address or FQDN
     charset     utf-8;
 
     # max upload size
@@ -37,6 +36,6 @@ server {
 
 server {
     listen       80;
-    server_name  iwebtools.cn;
-    return       301 http://www.iwebtools.cn$request_uri;
+    server_name  pylixm.top;
+    return       301 http://www.pylixm.top$request_uri;
 }
